# WateRMQ

./: README.md  main.c  semaphore_test.c
BackendC/: BackLibWaterRMQ.c  CMakeLists.txt  error
BackendC/librabbitmq/: CMakeLists.txt
BackendC/librabbitmq/debian/: changelog  control  librabbitmq-dev.install  rules  watch
BackendC/librabbitmq/debian/patches/: 0001-cmake_with_ssl.patch  0003-disable-test-basic.patch  0004-Fix-typo-in-amqp-publish.1-manpage.patch  cmake_with_ssl.patch  disable-test-basic.patch  series
BackendC/librabbitmq/debian/tests/: upstream
BackendC/librabbitmq/debian/upstream/: metadata
BackendC/librabbitmq/watebin/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  librabbitmq.pc  rabbitmq-c-config-version.cmake  rabbitmq-targets.cmake
BackendC/librabbitmq/watebin/librabbitmq/: Makefile  cmake_install.cmake  librabbitmq.so.4.5.0
BackendC/librabbitmq/watebin/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
BackendC/librabbitmq/watebin/watermq/: Makefile  cmake_install.cmake
BackendC/librabbitmq/watermq/: BackLibWaterRMQ.c  CMakeLists.txt  amqp_consumerX.c
FrontendCPP/: CMakeLists.txt  SemaphoreCPP.cpp  SemaphoreCPP.hpp  WateRMQ.cpp  WateRMQ.hpp  WateRMQCPP.cpp  main
